--- a/website/static/index.html
+++ b/website/static/index.html
@@ -66,9 +66,15 @@
 <div class="clearfix banner-wrap">
   <div class="banner-content">
     <div class="banner-info">
-      <h2>Virtual Presto Tech Talk Series</h2>
-      <h3>A new tech talk every month featuring Presto users and their use&nbsp;cases</h3>
-      <a class="button" href="https://www.meetup.com/prestodb" target="_blank">Join the Virtual Meetup Group</a>
+      <div><img src="./img/prestocon-logo-white.svg" alt="prestocon" class="banner-logo">
+            <h3><b>Virtual Experience - September 24, 2020</b></h3><p>Join speakers from Facebook, Uber, Twitter, Pinterest and other leading organizations at the biggest Presto event of the&nbsp;year</p></div>
+      <div class="btn"><a class="button" href="https://events.linuxfoundation.org/prestocon/register/" target="_blank">Register Here</a></div>
+    </div>
+    <div class="white-separator">&nbsp;</div>
+    <div class="banner-info">
+      <div><h2>Virtual Presto Tech Talk Series</h2>
+            <h3>A new tech talk every month featuring Presto users and their use&nbsp;cases</h3></div>
+      <div class="btn"><a class="button" href="https://www.meetup.com/prestodb" target="_blank">Join the Virtual Meetup Group</a></div>
     </div>
   </div>
 </div>
