Add Alibaba to Banner

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -67,7 +67,7 @@
   <div class="banner-content">
     <div class="banner-info">
       <div><img src="./img/prestocon-logo-white.svg" alt="prestocon" class="banner-logo">
-            <h3><b>Virtual Experience - September 24, 2020</b></h3><p>Join speakers from Facebook, Uber, Twitter, Pinterest and other leading organizations at the biggest Presto event of the&nbsp;year</p></div>
+            <h3><b>Virtual Experience - September 24, 2020</b></h3><p>Join speakers from Facebook, Uber, Twitter, Alibaba, Pinterest and other leading organizations at the biggest Presto event of the&nbsp;year</p></div>
       <div class="btn"><a class="button" href="https://events.linuxfoundation.org/prestocon/register/" target="_blank">Register Here</a></div>
     </div>
     <div class="white-separator">&nbsp;</div>
