Presto-cloud and book updates

--- a/website/static/resources.html
+++ b/website/static/resources.html
@@ -436,6 +436,24 @@ try (Connection connection =
         <h3 id="aws">AWS</h3>
 
         <div class="item">
+            <h4>Presto Cloud</h4>
+            <dl>
+                <dt>Website</dt>
+                <dd><a href="https://ahana.io/" target="_blank">Ahana</a></dd>
+                <dt>Maintainer</dt>
+                <dd><a href="https://ahana.io/" target="_blank">Ahana</a></dd>
+                <dd>
+                    <p>
+                        Ahana Cloud for Presto is the first cloud-native managed service for Presto. This offering is designed to simplify the deployment, management and integration of Presto, with data catalogs, databases and data lakes on Amazon Web Services (AWS). <a href="https://ahana.io/ahana-cloud/" target="_blank">Ahana Cloud for Presto</a> is easy-to-use with no installation, no AMIs or CFTs, and no configuration needed. Via the Ahana console, Presto is deployed within the user’s AWS account, giving users complete control and visibility of clusters and their data. As a managed service, there is no infrastructure to manage, yet you can pay only for Ahana and the EC2 instances that you use. 
+                    <p/>
+                    <p>
+                        Ahana Cloud simplifies Presto. It comes out-of-the-box integrated with built-in catalogs, data sources, and dashboarding tools. Under the hood, Ahana leverages the latest version of Presto and runs with Amazon EKS for high scalability, availability, and manageability.
+                    </p>
+                </dd>
+            </dl>
+        </div>
+
+        <div class="item">
             <h4>Amazon Athena</h4>
             <dl>
                 <dt>Website</dt>
