added prestocon page, update home and getting started

--- a/website/static/getting-started.html
+++ b/website/static/getting-started.html
@@ -81,10 +81,10 @@
     <li><a href="https://medium.com/macoclock/installing-prestodb-on-mac-within-3-mins-84720d9b5b45">How to install on Mac in 3 min </a> </li>
  
     <li>
-        <a href=" https://www.oreilly.com/library/view/learning-and-operating/9781492095125/">Learning and Operating Presto</a> published by <a href="https://www.oreilly.com/">O’Reilly Media</a>
+        <a href=" https://ahana.io/ebook">Learning and Operating Presto</a> published by <a href="https://www.oreilly.com/">O’Reilly Media</a>
         <ul style="margin-left: 1em;">
             <li>Early release of O’Reilly book about Presto with introduction and tutorial of real-time analytics use case with Presto and Apache Pinot</li>
-            <li>Includes a foreword by Nezih Yigitbasi, Engineering Manager of Presto team at Facebook and founding Presto Foundation Technical Steering Committee Chairperson</li>
+            <li>Includes a foreword by Nezih Yigitbasi, founding Presto Foundation Technical Steering Committee Chairperson</li>
         </ul>
     </li>
 
