Updates to community page, home page, foundation page

--- a/website/static/community.html
+++ b/website/static/community.html
@@ -59,13 +59,10 @@
    
     <li><strong>Twitter:</strong>
 <a href="https://twitter.com/prestodb" target="_blank">@prestodb</a>
-     <li><strong>Meetup Group:</strong> <a href="https://www.meetup.com/prestodb/" target="_blank">Presto Virtual Meetup</a></li>
-
-    <li><strong>Mailing List:</strong> <a href="https://groups.google.com/group/presto-users" target="_blank">presto-users</a> (Slack is preferred)</li>
-  
-<li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/company/presto-foundation/" target="_blank">Follow us</a> </li>
-<li><strong>Facebook:</strong> <a href="https://www.facebook.com/prestodb" target="_blank"
->Like us</a> </li>
+     <li><strong>Meetup Groups:</strong> <a href="https://prestodb.io/community.html#meetup-groups">Join a Presto meetup near you</a></li>
+   <li><strong>Presto user discussion list:</strong> <a href="https://lists.prestodb.io/g/presto-users" target="_blank">presto-users</a></li>
+   <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/company/presto-foundation/" target="_blank">Follow us</a> </li>
+   <li><strong>Mailing List:</strong> <a href="https://groups.google.com/group/presto-users" target="_blank">presto-users</a> (Slack is preferred)</li>  
 </ul>
 
             
@@ -81,6 +78,16 @@
             discussion around Presto. Easy to become a member, 
             <a href="https://join.slack.com/t/prestodb/shared_invite/enQtNTQ3NjU2MTYyNDA2LTYyOTg3MzUyMWE1YTI3Njc5YjgxZjNiYTgxODAzYjI5YWMwYWE0MTZjYWFhNGMwNjczYjI3N2JhM2ExMGJlMWM" target="_blank">sign up to PrestoDB Slack here</a>.
         </p>
+
+  <h2 id="meetup-groups">Meetup Groups</h2>
+
+        <p>
+            There are Presto meetups across the world. Join a meetup near you!
+<li> <a href="https://www.meetup.com/prestodb/" target="_blank">Presto Meetup - Bay Area</a></li>
+<li> <a href="https://www.meetup.com/presto-meetup-new-york/" target="_blank">Presto Meetup - NYC</a> </li>
+<li> <a href="https://www.meetup.com/presto-meetup-london/" target="_blank">Presto Meetup - London</a> </li>
+<li> <a href="https://www.meetup.com/presto-meetup-sydney/" target="_blank">Presto Meetup - Sydney</a> </li>
+       </p>
     
 
         <h2>Issues</h2>
