--- a/website/static/index.html
+++ b/website/static/index.html
@@ -63,6 +63,14 @@
         </div>
     </div>
 </header>
+<div class="clearfix banner-wrap-signup">
+  <div class="banner-content">
+    <div class="banner-signup banner-info">
+        <h3><b>Join the Presto mailing list for the latest community updates</b> <a class="button" href="https://lists.prestodb.io/g/Community" target="_blank">Sign up</a></h3>
+    </div>
+  </div>
+</div>
+</div>
 <div class="clearfix banner-wrap">
   <div class="banner-content">
     <div class="banner-info">
@@ -78,6 +86,8 @@
     </div>
   </div>
 </div>
+
+
 <div class="content homecontent width clearfix">
     <div class="leftcol widecol">
         <h2>What is Presto?</h2>
@@ -221,14 +231,16 @@
       </script>
       <h3>Community</h3>
         <ul>
-            <li><a href="join">Join the Presto Foundation</a></li>
-            <li><a href="https://groups.google.com/group/presto-users">presto-users group</a></li>
+            <li><a href="https://lists.prestodb.io/g/presto-users">Presto user discussion list</a></li>
             <li><a href="https://github.com/prestodb/presto/issues">Report an issue</a></li>
             <li><a href="https://join.slack.com/t/prestodb/shared_invite/enQtNTQ3NjU2MTYyNDA2LTYyOTg3MzUyMWE1YTI3Njc5YjgxZjNiYTgxODAzYjI5YWMwYWE0MTZjYWFhNGMwNjczYjI3N2JhM2ExMGJlMWM">Slack</a></li>
-	    <li><a href="https://www.meetup.com/prestodb/">Virtual Meetup Group</a></li>
+	    <li><a href="https://prestodb.io/community.html#meetup-groups">Virtual Meetup Groups</a></li>
 	    <li><a href="https://www.linkedin.com/company/presto-foundation/">LinkedIn</a></li>
             <li><a href="https://www.facebook.com/prestodb">Facebook</a> <div class="fb-like" data-href="https://www.facebook.com/prestodb" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div></li>
             <li><a href="https://twitter.com/prestodb">Twitter</a></li>
+            <li><a href="https://groups.google.com/group/presto-users">presto-users google mailing list</a></li>
+            <li><a href="join">Join the Presto Foundation</a></li>
+
         </ul>
 
         <h3>License</h3>
