--- a/website/static/index.html
+++ b/website/static/index.html
@@ -231,7 +231,7 @@
       </script>
       <h3>Community</h3>
         <ul>
-            <li><a href="https://lists.prestodb.io/g/presto-users">Presto user discussion list</a></li>
+            <li><a href="https://lists.prestodb.io/g/Community">Presto mailing list</a></li>
             <li><a href="https://github.com/prestodb/presto/issues">Report an issue</a></li>
             <li><a href="https://join.slack.com/t/prestodb/shared_invite/enQtNTQ3NjU2MTYyNDA2LTYyOTg3MzUyMWE1YTI3Njc5YjgxZjNiYTgxODAzYjI5YWMwYWE0MTZjYWFhNGMwNjczYjI3N2JhM2ExMGJlMWM">Slack</a></li>
 	    <li><a href="https://prestodb.io/community.html#meetup-groups">Virtual Meetup Groups</a></li>
