--- a/website/static/index.html
+++ b/website/static/index.html
@@ -70,20 +70,12 @@
     </div>
   </div>
 </div>
-</div>
 <div class="clearfix banner-wrap">
   <div class="banner-content">
     <div class="banner-info">
-      <div><img src="./img/prestocon-logo-white.svg" alt="prestocon" class="banner-logo">
-            <h3><b>On-Demand</b></h3><p>Hear speakers from Facebook, Uber, Twitter, Alibaba, Pinterest and other leading organizations at the biggest Presto event of the&nbsp;year</p></div>
-      <div class="btn"><a class="button" href="prestocon.html">View Videos and Slides</a></div>
-    </div>
-    <div class="white-separator">&nbsp;</div>
-    <div class="banner-info">
-      <div><h2>Virtual Presto Tech Talk Series</h2>
-            <h3>A new tech talk every month featuring Presto users and their use&nbsp;cases</h3></div>
-      <div class="btn"><a class="button" href="https://www.meetup.com/prestodb" target="_blank">Join the Virtual Meetup Group</a></div>
-    </div>
+      <div><img src="./img/prestoconday_logo-white.svg" alt="PrestoCon Day" class="banner-logo">
+            <h3><b><i>All Things PrestoDB</i></b></h3><p><b>March 24, 2021 | Free Virtual Experience</b></p></div>
+      <div class="btn"><a class="button" href="https://events.linuxfoundation.org/prestocon-day/" target="_blank" >More Info</a> <a class="button" href="https://www.cvent.com/d/2jq810/4W?ct=50221cf5-5496-4c34-9ec0-3b52b1bf1204&_ga=2.181093029.386934818.1611860371-265920046.1609888998" target="_blank" >Free Registration</a></div>    </div>
   </div>
 </div>
 
