prestocon day 2021 on-demand page

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -74,8 +74,8 @@
   <div class="banner-content">
     <div class="banner-info">
       <div><img src="./img/prestoconday_logo-white.svg" alt="PrestoCon Day" class="banner-logo">
-            <h3><b><i>All Things PrestoDB</i></b></h3><p><b>March 24, 2021 | Free Virtual Experience</b></p></div>
-      <div class="btn"><a class="button" href="https://events.linuxfoundation.org/prestocon-day/" target="_blank" >More Info</a> <a class="button" href="https://www.cvent.com/d/2jq810/4W?ct=50221cf5-5496-4c34-9ec0-3b52b1bf1204&_ga=2.181093029.386934818.1611860371-265920046.1609888998" target="_blank" >Free Registration</a></div>    </div>
+            <h3><b><i>All Things PrestoDB</i></b></h3></div>
+      <div class="btn"><a class="button" href="prestoconday2021.html" >On-Demand Recordings</a></div>    </div>
   </div>
 </div>
 
