--- a/website/static/index.html
+++ b/website/static/index.html
@@ -61,8 +61,18 @@
         <div class="rightcol widecol showterm">
             <img src="static/presto-screenshot.png">
         </div>
+        <a href="https://www.infoworld.com/article/3637038/the-best-open-source-software-of-2021.html#slide16" target="_blank"><img src="img/badge-bossie.png" alt="" id="bossie-badge" /></a>
     </div>
 </header>
+
+<div class="clearfix banner-wrap">
+  <div class="banner-content">
+    <div class="banner-info">
+      <div><img src="./img/prestocon_21/prestocon_logo.svg" alt="PrestoCon" class="banner-logo">
+            <p><b><i>FREE VIRTUAL EVENT</i></b></p><h2>December 9, 2021</h2></div>
+      <div class="btn"><a class="button" href="https://events.linuxfoundation.org/prestocon/" target="_blank">REGISTER TODAY</a></div>    </div>
+  </div>
+</div>
 <div class="clearfix banner-wrap-signup">
   <div class="banner-content">
     <div class="banner-signup banner-info">
@@ -70,15 +80,6 @@
     </div>
   </div>
 </div>
-<div class="clearfix banner-wrap">
-  <div class="banner-content">
-    <div class="banner-info">
-      <div><img src="./img/prestoconday_logo-white.svg" alt="PrestoCon Day" class="banner-logo">
-            <h3><b><i>All Things PrestoDB</i></b></h3></div>
-      <div class="btn"><a class="button" href="prestoconday2021.html" >On-Demand Recordings</a></div>    </div>
-  </div>
-</div>
-
 
 <div class="content homecontent width clearfix">
     <div class="leftcol widecol">
