added logos to prestocon banner

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -65,12 +65,25 @@
     </div>
 </header>
 
-<div class="clearfix banner-wrap">
-  <div class="banner-content">
-    <div class="banner-info">
-      <div><img src="./img/prestocon_21/prestocon_logo.svg" alt="PrestoCon" class="banner-logo">
-            <p><b><i>FREE VIRTUAL EVENT</i></b></p><h2>December 9, 2021</h2></div>
-      <div class="btn"><a class="button" href="https://events.linuxfoundation.org/prestocon/" target="_blank">REGISTER TODAY</a></div>    </div>
+  <div class="clearfix banner-wrap">
+    <div class="banner-content">
+      <div class="banner-info">
+        <div><img src="./img/prestocon_21/prestocon_logo.svg" alt="PrestoCon" class="banner-logo">
+          <p style="color:#5D88D6;"><b><i>FREE VIRTUAL EVENT</i></b></p>
+          <h2>December 9, 2021</h2>
+        </div>
+        <div class="btn"><a class="button" href="https://events.linuxfoundation.org/prestocon/" target="_blank">REGISTER TODAY</a></div>
+        <div class="feature-logos">
+          <img src="img/prestocon_21/white-uber-logo.png" alt="uber" style="max-width:100px;" />
+          <img src="img/prestocon_21/logo_twitter.png" alt="twitter" style="max-width:60px;" />
+          <img src="img/prestocon_21/logo-meta.png" alt="meta" />
+          <img src="img/prestocon_21/logo-bytedance.png" alt="bytedance" style="max-width:190px;" />
+        </div>
+        <div>
+          <i><b>AND MORE...</b></i><br />
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <div class="clearfix banner-wrap-signup">
