Update membership levels to include 2021 revisions
Signed-off-by: Brian Warner <brian@bdwarner.com>

--- a/website/static/join.html
+++ b/website/static/join.html
@@ -139,14 +139,14 @@ src="https://landscape.prestodb.io/card-mode?category=presto-foundation-member&g
            Foundation membership?</h3>
 
         <p>
-            The Presto Foundation has two membership levels: Premier, and
-            Associate.
+            The Presto Foundation has three membership levels: Executive Premier,
+            Premier, and Associate.
         </p>
 
         <p>
-            <strong>Premier members</strong> are entitled to appoint a
+            <strong>Executive Premier and Premier members</strong> are entitled to appoint a
             representative to the Presto Foundation Governing Board and any
-            Presto Foundation committees. In this way, Premier members are
+            Presto Foundation committees. In this way, these members are
             directly involved in policy and funding allocation decisions.
         </p>
 
@@ -165,7 +165,12 @@ src="https://landscape.prestodb.io/card-mode?category=presto-foundation-member&g
         </p>
 
         <p>
-            Premier membership in the Presto Foundation is $10k annually, in
+            Executive Premier membership in the Presto Foundation is $90k annually, in
+            addition to Linux Foundation membership.
+        </p>
+
+        <p>
+            Premier membership in the Presto Foundation is $15k annually, in
             addition to Linux Foundation membership.
         </p>
 
