updates for post prestocon 2021

--- a/website/static/community.html
+++ b/website/static/community.html
@@ -87,6 +87,8 @@
 <li> <a href="https://www.meetup.com/presto-meetup-new-york/" target="_blank">Presto Meetup - NYC</a> </li>
 <li> <a href="https://www.meetup.com/presto-meetup-london/" target="_blank">Presto Meetup - London</a> </li>
 <li> <a href="https://www.meetup.com/presto-meetup-sydney/" target="_blank">Presto Meetup - Sydney</a> </li>
+<li> <a href="https://www.meetup.com/presto-meetup-bangalore/" target="_blank">Presto Meetup - Bangalore</a> </li>
+<li> <a href="https://www.meetup.com/presto-meetup-shanghai/" target="_blank">Presto Meetup - Shanghai</a> </li>
        </p>
     
 
