Added Biswa's slide deck to Prestocon2021 on-demand

--- a/website/static/prestocon_2021.html
+++ b/website/static/prestocon_2021.html
@@ -75,8 +75,8 @@ const presentationData = [
   {
     video: "https://www.youtube.com/watch?v=2k3qNY34dsA&list=PLJVeO1NMmyqX8-cfwo5ZAuuNv4WnwSP-w&index=21",
     videothumb: "https://i.ytimg.com/vi/2k3qNY34dsA/hqdefault.jpg",
-    slides: "",
-    slidesthumb:"",
+    slides: "https://static.sched.com/hosted_files/prestocon2021/f0/Open%20source%20data%20analytics%20_%20Trends%20and%20opportunities.pdf",
+    slidesthumb:"slide-trends.png",
     title: "Open Source Data Lake Analytics: Trends and Opportunities",
     speakers: "Biswapesh Chattopadhyay, Meta",
     logos:["logo-meta.png"]
