Add service desk links to Foundation page.
Signed-off-by: Brian Warner <brian@bdwarner.com>

--- a/website/static/join.html
+++ b/website/static/join.html
@@ -131,7 +131,17 @@ src="https://landscape.prestodb.io/card-mode?category=presto-foundation-member&g
             <strong>Governing Board</strong> is limited to Presto Foundation
             members, anyone may earn the right to lead the <strong>TSC</strong>,
             regardless of their membership status.
+        </p>
+
+        <h3 id="help">How do I get help with something?</h3>
+
         <p>
+          For help with anything related to membership (billing, renewals, access
+          to member committees, etc.) please file a ticket with our <a href=
+          "https://members.prestodb.io">member service desk</a>. Project community
+          members may also <a href="https://members.prestodb.io">file a ticket</a>
+          to gain access to project resources such as Zoom or shared calendars.
+        </p>
 
         <h2 id="join">Become a member</h2>
 
@@ -183,7 +193,8 @@ src="https://landscape.prestodb.io/card-mode?category=presto-foundation-member&g
 
         <p>
             Please complete the <a href="https://join.prestodb.io">Presto Foundation application
-            form</a>. If you have any questions, please email <a
+            form</a>. If you have any questions, please
+            <a href="https://members.prestodb.io">file a ticket</a> or email <a
             href="mailto:membership@prestodb.io">membership@prestodb.io</a>.
         </p>
 
