--- a/website/static/index.html
+++ b/website/static/index.html
@@ -35,6 +35,14 @@
   }(document, 'script', 'facebook-jssdk'));
   </script>
   <script src="static/js/version.js"></script>
+  <noscript>
+    <style>
+      .sequential-fadeup>*, .sequential-fadeup>*:first-child, .sequential-fadeup>*:last-child {
+          opacity: 1;
+          transform: scale(1);
+      }
+    </style>
+  </noscript>
   <header class="topbar clearfix">
     <nav class="width">
       <a href=".">
@@ -70,9 +78,12 @@
 <div class="clearfix banner-wrap">
   <div class="banner-content">
     <div class="banner-info">
-      <div><img src="./img/prestocon_21/prestocon_logo.svg" alt="PrestoCon 2021" class="banner-logo">
-            <h3><b><i>VIRTUAL EVENT</i></b></h3></div>
-      <div class="btn"><a class="button" href="prestocon_2021.html" >On-Demand Recordings</a></div>    </div>
+      <div class="sequential-fadeup">
+          <img src="./img/prestoconday_logo-white.svg" alt="PrestoCon Day 2022" class="banner-logo">
+          <h2 class="test"><b><i>All Things PrestoDB</i></b></h2><h3 class="test">Free Virtual Event: July 21, 2022</h2>
+          <div class="btn"><a class="button" href="https://events.linuxfoundation.org/prestocon-day/" target="_blank" >Register Here</a></div> 
+      </div>
+    </div>
   </div>
 </div>
   </div>
@@ -236,6 +247,7 @@
       <a href="https://lfprojects.org/policies/terms-of-use/">Terms of Use</a>.
     </section>
   </div>
+  <script async src="static/js/effects.js"></script>
 </body>
 
 </html>
