--- a/website/static/index.html
+++ b/website/static/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Presto | Distributed SQL Query Engine for Big Data</title>
   <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css" />
-  <link rel="stylesheet" href="css/custom.css" type="text/css" />
+  <link rel="stylesheet" href="static/css/custom.css" type="text/css" />
   <link rel="stylesheet" href="static/css/effects.css" type="text/css" />
   <link rel="canonical" href="http://prestodb.github.io/" />
   <meta name="viewport" content="width=device-width">
