--- a/website/static/powered-by-presto.html
+++ b/website/static/powered-by-presto.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Presto | Powered by Presto</title>
     <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="css/custom.css" type="text/css" />
+    <link rel="stylesheet" href="static/css/custom.css" type="text/css" />
     <link rel="stylesheet" href="static/css/effects.css" type="text/css" />
     <link rel="stylesheet" href="static/css/presentations.css" type="text/css" />
     <link rel="stylesheet" href="static/css/ytlightbox.css" type="text/css" />
